--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,4 +63,7 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
+    implementation "androidx.constraintlayout:constraintlayout:2.0.1"
+
 }
