--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "PollNicely"
+rootProject.name = "PollGPT"
 include ':app'
